# ephdrops

./: .dockerignore  .env.example  .gitignore  Dockerfile  NATIVE.md  README.md  package-lock.json  package.json
.github/workflows/: android.yml  desktop.yml
client/: capacitor.config.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/android/app/: build.gradle
client/public/: offline.html  sw.js
client/public/privacy/: index.html
client/src/: App.jsx  index.css  main.jsx
client/src/components/: ClaimDropModal.jsx  CreateDropModal.jsx  DeepLinkHandler.jsx  DropCreatedModal.jsx  DropPage.jsx  DropViewer.jsx  DropsHome.jsx  MobileLargeDropNote.jsx  MyDrops.jsx  SettingsModal.jsx  ShareSheet.jsx  StegoModal.jsx
client/src/context/: ThemeContext.jsx
client/src/crypto/: large-file-crypto.js  node-crypto-shim.js  ohttp.js  privacy-pass.js  steganography.js  streamdec.mjs
client/src/i18n/: index.js
client/src/i18n/locales/: ar.js  de.js  en.js  es.js  fr.js  hi.js  ja.js  pt.js  ru.js  (+1 more)
client/src/utils/: creator.js  downloadHelper.js  drops.js  eph-file.js  multipart-upload.js  platform.js  resolve-url.js  secure-fetch.js  share.js  streaming-create.js
ephemeral-key/: .gitignore  README.md
privacy/: index.html
server/: cors.js  drops-routes.js  drops.js  index.js  package-lock.json  package.json  r2.js  utils.js  wordlist.js
server/utils/: eph-file.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+3 files in other folders)
