[package]
name = "ephemeral-drops"
version = "1.0.0"
description = "Ephemeral Drops — encrypted, self-destructing drops"
authors = ["Ephemeral Drops"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

# The library that holds the app logic; `main.rs` is a thin entry point that
# calls into it. Keeping the logic in a lib makes a future mobile target trivial.
[lib]
name = "ephemeral_drops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
panic = "abort"   # smaller binaries; no unwinding
codegen-units = 1 # better optimization
lto = true        # link-time optimization
opt-level = "s"   # optimize for size
strip = true      # strip symbols
